# rex-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
rex/: __init__.py  cli.py
rex/commands/: __init__.py  base64_cmd.py  cert_cmd.py  cron_cmd.py  encrypt_cmd.py  hash_cmd.py  json_cmd.py  jwt_cmd.py  network_cmd.py  password_cmd.py  uuid_cmd.py  yaml_cmd.py
tests/: __init__.py  test_cli.py
